Update compile source and target to 21